--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "third_party/ROMP"]
 	path = third_party/ROMP
-	url = git@github.com:EasyPaperSniper/ROMP.git
+	url = https://github.com/EasyPaperSniper/ROMP.git
 	branch = Switch4EAI
