--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "third_party/GMR"]
 	path = third_party/GMR
 	url = https://github.com/YanjieZe/GMR.git
+[submodule "third_party/humanoid-general-motion-tracking"]
+	path = third_party/humanoid-general-motion-tracking
+	url = https://github.com/zixuan417/humanoid-general-motion-tracking.git
